fix overflow-x

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,7 @@
 
 body {
     background-color: var(--lightGrey);
+    overflow-x: hidden;
 }
 
 .bg-light_grey {
